🔧更改：重构物品流向追踪 (itemFlowTracker)规则